after adding chat Backend